Mise en place de partials pour les templates

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,67 +1,51 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
+<% include ../partials/header %>
 
-    <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta http-equiv="content-language" content="fr">
-      <meta name="language" content="fr">
-    
-    <title>Kids Coding 07</title>
+<div class="kc-header">
+  <div class="kc-logo">
+    <img src="images/logo-kc07.svg" alt="Logo Kids Coding">
+  </div>
 
-    <link rel="stylesheet" href="css/style.css"/>
+  <div class="kc-accroche">
+    <h1>
+      Un apprentissage rapide et ludique du code pour les enfants.
+    </h1>
+  </div>
 
-  </head>
+  <div class="kc-inscription">
+    <p>
+      Laissez vos enfants accéder à cet univers amusant tout en apprenant.
+    </p>
+    <a href="/inscription">Inscription</a>
+  </div>
+</div>
+
+<section class="kc-infos">
+  <h1 class="kc-titre">Quelques chiffres</h1>
+  <div class="kc-detail">
+    <div class="kc-circle"></div>
+    <div class="kc-circle"></div>
+    <div class="kc-circle"></div>
+  </div>
+</section>
+
+<section class="kc-equipe">
+  <h1 class="kc-titre">Les accompagnateurs</h1>
+  <p class="kc-description">
+    Cinq accompagnateurs issus de Simplon.VE organisent cet atelier afin d'apprendre le code aux enfants en s'amusant.
+  </p>
+</section>
+
+<div class="kc-communication">
   
-  <body>
-    <div class="kc-header">
-      <div class="kc-logo">
-        <img src="images/logo-kc07.svg" alt="Logo Kids Coding">
-      </div>
+</div>
 
-      <div class="kc-accroche">
-        <h1>
-          Un apprentissage rapide et ludique du code pour les enfants.
-        </h1>
-      </div>
+<section class="kc-contact">
+  <h1 class="kc-titre">Plus d'informations</h1>
+  
+</section>
 
-      <div class="kc-inscription">
-        <p>
-          Laissez vos enfants accéder à cet univers amusant tout en apprenant.
-        </p>
-        <a href="/inscription">Inscription</a>
-      </div>
-    </div>
+<div class="kc-footer">
+  
+</div>
 
-    <section class="kc-infos">
-      <h1 class="kc-titre">Quelques chiffres</h1>
-      <div class="kc-detail">
-        <div class="kc-circle"></div>
-        <div class="kc-circle"></div>
-        <div class="kc-circle"></div>
-      </div>
-    </section>
-
-    <section class="kc-equipe">
-      <h1 class="kc-titre">Les accompagnateurs</h1>
-      <p class="kc-description">
-        Cinq accompagnateurs issus de Simplon.VE organisent cet atelier afin d'apprendre le code aux enfants en s'amusant.
-      </p>
-    </section>
-    
-    <div class="kc-communication">
-      
-    </div>
-
-    <section class="kc-contact">
-      <h1 class="kc-titre">Plus d'informations</h1>
-      
-    </section>
-
-    <div class="kc-footer">
-      
-    </div>
-  </body>
-</html>
+<% include ../partials/footer %>
