--- a/views/pages/inscription.ejs
+++ b/views/pages/inscription.ejs
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
+<% include ../partials/header %>
 
-    <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta http-equiv="content-language" content="fr">
-      <meta name="language" content="fr">
-    
-    <title>Kids Coding 07</title>
+<h1>
+  Inscription
+</h1>
+<a href="/">Accueil</a>
 
-    <link rel="stylesheet" href="css/style.css"/>
-
-  </head>
-  
-  <body>
-    <h1>
-      Inscription
-    </h1>
-    <a href="/">Accueil</a>
-  </body>
-</html>
+<% include ../partials/footer %>
